--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -72,6 +72,7 @@ li {
             
 
             & span.itemName {
+                margin-left: 20px;
                 margin-right: 20px;
                 width: 80px;
                 display: inline-block;
