--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -43,6 +43,10 @@ li {
 
 /* 注释,以下为battle相关样式 */
 .row {
+    & .battleResult {
+          width: 90%;
+          margin: 0 auto;
+
     & .header {}
 
     & .score {
@@ -80,8 +84,9 @@ li {
             }
         }
     }
+ }
 }
-
+/* 注释,以下为popular相关样式 */
 .languages {
     display: -ms-flexbox;
     display: block;
@@ -242,13 +247,14 @@ li {
             }
 
             & .repo {
-                width: 300px;
+                width: 90%;
                 display: -ms-flexbox;
                 display: flex;
                 -ms-flex-direction: column;
                 flex-direction: column;
-                margin: 25px;
-                padding: 20px;
+                margin: 0 auto;
+                margin-bottom: 20px;
+                padding-left: 10px;
                 -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, .46);
                 box-shadow: 0 1px 5px rgba(0, 0, 0, .46);
 
