--- a/src/styles/App.less
+++ b/src/styles/App.less
@@ -134,6 +134,7 @@ li {
         -ms-flex-pack: distribute;
         justify-content: space-around;
         width: 100%;
+        float: left;
 
         & .popular-item {
             text-align: center;
@@ -141,6 +142,7 @@ li {
             overflow: hidden;
             clear: none;
             display: inline-block;
+            float: left;
 
             & .popular-rank {
                 font-size: 20px;
